[package]
name = "terminalcolor"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Converts shorthand codes into full ANSI color codes."
homepage = "https://github.com/7Limes/terminalcolor-rust"
repository = "https://github.com/7Limes/terminalcolor-rust"
readme = "README.md"
keywords = ["text", "color", "ansi", "string"]
exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
